--- a/v/config
+++ b/v/config
@@ -5,16 +5,19 @@
 	logallrefupdates = true
 	ignorecase = true
 [remote "origin"]
-	url = git@bitbucket.org:6du-space/sh.git 
+	url = git@gitee.com:dns6/v-.git 
 	fetch = +refs/heads/*:refs/remotes/origin/*
 [remote "origin"]
-	url = git@gitee.com:www-6du-space/sh.git
+	url = git@gitshell.com:dns/v.git 
 	fetch = +refs/heads/*:refs/remotes/origin/*
 [remote "origin"]
-	url = git@github.com:6du-space/sh.git 
+	url = git@gitlab.com:dns6/v.git
 	fetch = +refs/heads/*:refs/remotes/origin/*
 [remote "origin"]
-	url = git@gitlab.com:6du/sh.git 
+	url = git@github.com:dns6/v.git
+	fetch = +refs/heads/*:refs/remotes/origin/*
+[remote "origin"]
+	url = git@bitbucket.org:dns6/v.git 
 	fetch = +refs/heads/*:refs/remotes/origin/*
 [branch "master"]
 	remote = origin
